Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -209,6 +209,8 @@ Error message and password prompt
 
 <li>Cortex M4 Position Independent Code -fPIC</li>
 
+<li>Draft of 'New Tiddler'</li>
+
 <li>Reactance, capacity</li>
 
 <li>SEGGER RTT usage notes</li>
@@ -9779,7 +9781,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20210830072052434" list="[[BLE Throughput]]" modified="20210830072052434" title="$:/StoryList">
+<div created="20211019132059233" list="$:/ControlPanel [[Draft of 'New Tiddler']]" modified="20211019132059233" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9795,7 +9797,7 @@ Error message and password prompt
         },
         &quot;$:/info/startup-timestamp&quot;: {
             &quot;title&quot;: &quot;$:/info/startup-timestamp&quot;,
-            &quot;text&quot;: &quot;20210829071326482&quot;
+            &quot;text&quot;: &quot;20211019132010687&quot;
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
@@ -10308,6 +10310,17 @@ As r9 used as base in both cases this code won't work!!!!
 Need to find a way to make linker make .bss relocations relatively to .data segment start
 
 </pre>
+</div>
+<div created="20211019132038588" draft.of="New Tiddler" draft.title="Tooling" modified="20211019132047524" tags="" title="Draft of 'New Tiddler'">
+<pre>Install neovim from latest repo in ubuntu :
+
+https://thomasventurini.com/articles/install-neovim-05-in-ubuntu/
+
+sudo add-apt-repository ppa:neovim-ppa/unstable
+
+sudo apt-get update
+
+sudo apt-get install neovim</pre>
 </div>
 <div created="20200902162941894" modified="20200910115435166" tags="" title="Reactance, capacity">
 <pre>Angular frequency ω (in radians per second), is larger than frequency ν (in cycles per second, also called Hz), by a factor of 2π
