--- a/index.html
+++ b/index.html
@@ -209,6 +209,8 @@ Error message and password prompt
 
 <li>Cortex M4 Position Independent Code -fPIC</li>
 
+<li>GIT</li>
+
 <li>Reactance, capacity</li>
 
 <li>SEGGER RTT usage notes</li>
@@ -9781,7 +9783,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20211019132059233" list="" modified="20211019135313629" title="$:/StoryList">
+<div created="20211021070926795" list="GIT Tooling" modified="20211021070926795" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9797,7 +9799,7 @@ Error message and password prompt
         },
         &quot;$:/info/startup-timestamp&quot;: {
             &quot;title&quot;: &quot;$:/info/startup-timestamp&quot;,
-            &quot;text&quot;: &quot;20211019132010687&quot;
+            &quot;text&quot;: &quot;20211021070924803&quot;
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
@@ -10310,6 +10312,15 @@ As r9 used as base in both cases this code won't work!!!!
 Need to find a way to make linker make .bss relocations relatively to .data segment start
 
 </pre>
+</div>
+<div created="20211021070937205" modified="20211021071014355" tags="" title="GIT">
+<pre>To &quot;fix&quot; an old commit with a small change, without changing the commit message of the old commit, where OLDCOMMIT is something like 091b73a:
+`
+git add &lt;my fixed files&gt;
+git commit --fixup=OLDCOMMIT
+git rebase --interactive --autosquash OLDCOMMIT^`
+
+You can also use git commit --squash=OLDCOMMIT to edit the old commit message during rebase.</pre>
 </div>
 <div created="20200902162941894" modified="20200910115435166" tags="" title="Reactance, capacity">
 <pre>Angular frequency ω (in radians per second), is larger than frequency ν (in cycles per second, also called Hz), by a factor of 2π
