--- a/index.html
+++ b/index.html
@@ -9783,7 +9783,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20211021070926795" list="GIT Tooling" modified="20211021070926795" title="$:/StoryList">
+<div created="20211107145141743" list="$:/ControlPanel TiddlyWiki ADS1299" modified="20211107145222980" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9799,7 +9799,7 @@ Error message and password prompt
         },
         &quot;$:/info/startup-timestamp&quot;: {
             &quot;title&quot;: &quot;$:/info/startup-timestamp&quot;,
-            &quot;text&quot;: &quot;20211021070924803&quot;
+            &quot;text&quot;: &quot;20211107145138653&quot;
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
@@ -10020,10 +10020,16 @@ so only compiler parses the SEGGER_SYSVIEW_FreeRTOS.h, not the assembler
 
 </pre>
 </div>
-<div created="20200924104107854" modified="20200924121237279" tags="" title="ADS1299">
+<div created="20200924104107854" modified="20211107145150899" tags="" title="ADS1299">
 <pre>The analog inputs to the device connect directly to an integrated low-noise, low-drift, high input impedance, programmable gain amplifier. ( high input impedance is important in order to vanish voltage divider effect. For example, say we have a 10V signal with 1kΩ impedance. We connect this to a 1MΩ input, the input voltage will be 10V⋅1MΩ1MΩ+1kΩ=9.99V. If we reduce the input impedance to 10kΩ, we get 10V⋅10kΩ10kΩ+1kΩ=9.09V Reduce it to 1k and we get 10V⋅1kΩ1kΩ+1kΩ=5V )
 
-common-mode voltage point is the midpoint of the positive and negative analog input : [img[2045eq01.gif]]</pre>
+common-mode voltage point is the midpoint of the positive and negative analog input : [img[2045eq01.gif]]
+
+common-mode voltage point is the midpoint of the positive and negative analog input :
+
+Electrode impedance measurement:
+
+Because of the capacitive components corresponding to skin-electrode interface, alternate current (AC) measurement is needed to estimate the skin-electrode impedance. In particular, for dry contact electrodes, which capacitance is considerably high than wet electrodes.</pre>
 </div>
 <div created="20200826124733722" modified="20200827135904143" tags="" title="ARMv7-m branching decipher on STM32L4 mcu">
 <pre>Following command 
