--- a/index.html
+++ b/index.html
@@ -9783,7 +9783,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20211107145141743" list="$:/ControlPanel TiddlyWiki ADS1299" modified="20211107145222980" title="$:/StoryList">
+<div created="20211205055528038" list="GIT ADS1299" modified="20211205055606058" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9799,7 +9799,7 @@ Error message and password prompt
         },
         &quot;$:/info/startup-timestamp&quot;: {
             &quot;title&quot;: &quot;$:/info/startup-timestamp&quot;,
-            &quot;text&quot;: &quot;20211107145138653&quot;
+            &quot;text&quot;: &quot;20211205055520171&quot;
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
@@ -9835,11 +9835,11 @@ Error message and password prompt
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;1920&quot;
+            &quot;text&quot;: &quot;412&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;1080&quot;
+            &quot;text&quot;: &quot;869&quot;
         },
         &quot;$:/info/browser/language&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/language&quot;,
@@ -10319,14 +10319,18 @@ Need to find a way to make linker make .bss relocations relatively to .data segm
 
 </pre>
 </div>
-<div created="20211021070937205" modified="20211021071014355" tags="" title="GIT">
+<div created="20211021070937205" modified="20211205055704007" tags="" title="GIT">
 <pre>To &quot;fix&quot; an old commit with a small change, without changing the commit message of the old commit, where OLDCOMMIT is something like 091b73a:
 `
 git add &lt;my fixed files&gt;
 git commit --fixup=OLDCOMMIT
 git rebase --interactive --autosquash OLDCOMMIT^`
 
-You can also use git commit --squash=OLDCOMMIT to edit the old commit message during rebase.</pre>
+You can also use git commit --squash=OLDCOMMIT to edit the old commit message during rebase.
+
+How to manage vim plugins in git:
+
+https://gist.github.com/manasthakur/d4dc9a610884c60d944a4dd97f0b3560</pre>
 </div>
 <div created="20200902162941894" modified="20200910115435166" tags="" title="Reactance, capacity">
 <pre>Angular frequency ω (in radians per second), is larger than frequency ν (in cycles per second, also called Hz), by a factor of 2π
