--- a/index.html
+++ b/index.html
@@ -209,6 +209,8 @@ Error message and password prompt
 
 <li>Cortex M4 Position Independent Code -fPIC</li>
 
+<li>Draft of 'New Tiddler'</li>
+
 <li>GIT</li>
 
 <li>Reactance, capacity</li>
@@ -9783,7 +9785,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20211205055528038" list="GIT ADS1299" modified="20211205055606058" title="$:/StoryList">
+<div list="[[Draft of 'New Tiddler']]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9799,7 +9801,7 @@ Error message and password prompt
         },
         &quot;$:/info/startup-timestamp&quot;: {
             &quot;title&quot;: &quot;$:/info/startup-timestamp&quot;,
-            &quot;text&quot;: &quot;20211205055520171&quot;
+            &quot;text&quot;: &quot;20211216115453175&quot;
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
@@ -9835,11 +9837,11 @@ Error message and password prompt
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;412&quot;
+            &quot;text&quot;: &quot;1920&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;869&quot;
+            &quot;text&quot;: &quot;1080&quot;
         },
         &quot;$:/info/browser/language&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/language&quot;,
@@ -10317,6 +10319,15 @@ Disassembly of section .data:
 As r9 used as base in both cases this code won't work!!!!
 Need to find a way to make linker make .bss relocations relatively to .data segment start
 
+</pre>
+</div>
+<div created="20211216115502076" draft.of="New Tiddler" draft.title="connecting bluetooth classic device from linux terminal" modified="20211216115753192" tags="" title="Draft of 'New Tiddler'">
+<pre>use bluetoothctl command to pair with relevant device
+
+
+```
+sudo bluetoothctl
+```
 </pre>
 </div>
 <div created="20211021070937205" modified="20211205055704007" tags="" title="GIT">
