Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -207,9 +207,9 @@ Error message and password prompt
 
 <li>Bluetooth wiki</li>
 
-<li>Cortex M4 Position Independent Code -fPIC</li>
+<li>connecting bluetooth classic device from linux terminal</li>
 
-<li>Draft of 'New Tiddler'</li>
+<li>Cortex M4 Position Independent Code -fPIC</li>
 
 <li>GIT</li>
 
@@ -9785,7 +9785,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div list="[[Draft of 'New Tiddler']]" title="$:/StoryList">
+<div list="[[connecting bluetooth classic device from linux terminal]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10197,6 +10197,15 @@ SCO is for real-time narrow band signal which does not require retransmission. V
 
 https://jimmywongiot.com/2020/07/08/how-to-install-nrf-sniffer-through-nrf52-dk-board/</pre>
 </div>
+<div created="20211216115502076" modified="20211216115808893" tags="" title="connecting bluetooth classic device from linux terminal">
+<pre>use bluetoothctl command to pair with relevant device
+
+
+```
+sudo bluetoothctl
+```
+</pre>
+</div>
 <div created="20201208084726663" modified="20210728130811555" tags="" title="Cortex M4 Position Independent Code -fPIC">
 <pre># Generate position independent code.                                   -fPIC
 # Access bss via the GOT.                                                         -mno-pic-data-is-text-relative
@@ -10319,15 +10328,6 @@ Disassembly of section .data:
 As r9 used as base in both cases this code won't work!!!!
 Need to find a way to make linker make .bss relocations relatively to .data segment start
 
-</pre>
-</div>
-<div created="20211216115502076" draft.of="New Tiddler" draft.title="connecting bluetooth classic device from linux terminal" modified="20211216115753192" tags="" title="Draft of 'New Tiddler'">
-<pre>use bluetoothctl command to pair with relevant device
-
-
-```
-sudo bluetoothctl
-```
 </pre>
 </div>
 <div created="20211021070937205" modified="20211205055704007" tags="" title="GIT">
