--- a/index.html
+++ b/index.html
@@ -10197,14 +10197,22 @@ SCO is for real-time narrow band signal which does not require retransmission. V
 
 https://jimmywongiot.com/2020/07/08/how-to-install-nrf-sniffer-through-nrf52-dk-board/</pre>
 </div>
-<div created="20211216115502076" modified="20211216115808893" tags="" title="connecting bluetooth classic device from linux terminal">
+<div created="20211216115502076" modified="20211216120151416" tags="" title="connecting bluetooth classic device from linux terminal">
 <pre>use bluetoothctl command to pair with relevant device
 
 
 ```
 sudo bluetoothctl
 ```
-</pre>
+
+
+```
+# power on
+# agent on
+# scan on
+# trust &lt;MAC&gt;
+# pair &lt;MAC&gt;
+```</pre>
 </div>
 <div created="20201208084726663" modified="20210728130811555" tags="" title="Cortex M4 Position Independent Code -fPIC">
 <pre># Generate position independent code.                                   -fPIC
