--- a/index.html
+++ b/index.html
@@ -211,6 +211,8 @@ Error message and password prompt
 
 <li>Cortex M4 Position Independent Code -fPIC</li>
 
+<li>Draft of 'connecting bluetooth classic device from linux terminal'</li>
+
 <li>GIT</li>
 
 <li>Reactance, capacity</li>
@@ -9785,7 +9787,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div list="[[connecting bluetooth classic device from linux terminal]]" title="$:/StoryList">
+<div list="[[Draft of 'connecting bluetooth classic device from linux terminal']]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10197,7 +10199,7 @@ SCO is for real-time narrow band signal which does not require retransmission. V
 
 https://jimmywongiot.com/2020/07/08/how-to-install-nrf-sniffer-through-nrf52-dk-board/</pre>
 </div>
-<div created="20211216115502076" modified="20211216120255907" tags="" title="connecting bluetooth classic device from linux terminal">
+<div created="20211216115502076" modified="20211216120316922" tags="" title="connecting bluetooth classic device from linux terminal">
 <pre>use bluetoothctl command to pair with relevant device
 
 
@@ -10214,7 +10216,7 @@ sudo bluetoothctl
 # pair &lt;MAC&gt;
 ```
 
-You can now quit ```bluetoothctl``` by typing ```Ctrl + D```.</pre>
+You can now quit ``bluetoothctl`` by typing ```Ctrl + D```.</pre>
 </div>
 <div created="20201208084726663" modified="20210728130811555" tags="" title="Cortex M4 Position Independent Code -fPIC">
 <pre># Generate position independent code.                                   -fPIC
@@ -10339,6 +10341,27 @@ As r9 used as base in both cases this code won't work!!!!
 Need to find a way to make linker make .bss relocations relatively to .data segment start
 
 </pre>
+</div>
+<div created="20211216115502076" draft.of="connecting bluetooth classic device from linux terminal" draft.title="connecting bluetooth classic device from linux terminal" modified="20211216122650292" tags="" title="Draft of 'connecting bluetooth classic device from linux terminal'">
+<pre>use ``bluetoothctl`` command to pair with relevant device
+
+
+```
+sudo bluetoothctl
+```
+
+
+```
+# power on
+# agent on
+# scan on
+# trust &lt;MAC&gt;
+# pair &lt;MAC&gt;
+```
+
+You can now quit ``bluetoothctl`` by typing ``Ctrl + D``.
+Now close all running processes of ``rfcomm``
+```sudo killall rfcomm```</pre>
 </div>
 <div created="20211021070937205" modified="20211205055704007" tags="" title="GIT">
 <pre>To &quot;fix&quot; an old commit with a small change, without changing the commit message of the old commit, where OLDCOMMIT is something like 091b73a:
