--- a/index.html
+++ b/index.html
@@ -10197,7 +10197,7 @@ SCO is for real-time narrow band signal which does not require retransmission. V
 
 https://jimmywongiot.com/2020/07/08/how-to-install-nrf-sniffer-through-nrf52-dk-board/</pre>
 </div>
-<div created="20211216115502076" modified="20211216124054923" tags="" title="connecting bluetooth classic device from linux terminal">
+<div created="20211216115502076" modified="20211216124211678" tags="" title="connecting bluetooth classic device from linux terminal">
 <pre>use ``bluetoothctl`` command to pair with relevant device
 
 
@@ -10222,13 +10222,17 @@ sudo killall rfcomm
 ```
 
 Now yo can connect to your device with following command
+
 ```
 sudo rfcomm connect /dev/rfcomm0 20:16:10:24:29:77 1
 ```
+
 Don't run the above command in background mode i.e. with ``&amp;`` at the end
 as you have to enter your user password (because of sudo)  and ``&amp;`` won't 
-prompt for password. It will just prompt you with :
-``Can't open RFCOMM device: Permission denied``
+prompt for password. It will just prompt you with : 
+``
+Can't open RFCOMM device: Permission denied
+``
 or something similar.</pre>
 </div>
 <div created="20201208084726663" modified="20210728130811555" tags="" title="Cortex M4 Position Independent Code -fPIC">
