--- a/index.html
+++ b/index.html
@@ -10197,7 +10197,7 @@ SCO is for real-time narrow band signal which does not require retransmission. V
 
 https://jimmywongiot.com/2020/07/08/how-to-install-nrf-sniffer-through-nrf52-dk-board/</pre>
 </div>
-<div created="20211216115502076" modified="20211219124607797" tags="" title="connecting bluetooth classic device from linux terminal">
+<div created="20211216115502076" modified="20211219125548638" tags="" title="connecting bluetooth classic device from linux terminal">
 <pre>use ``bluetoothctl`` command to pair with relevant device
 
 
@@ -10265,6 +10265,12 @@ And then connect with miniterm.py like that:
 
 ```
 miniterm socket://127.0.0.1:7777
+```
+
+To represent data in hex format run miniterm like that:
+
+```
+miniterm --encoding hexlify socket://127.0.0.1:7777
 ```
 
 
