--- a/index.html
+++ b/index.html
@@ -201,6 +201,8 @@ Error message and password prompt
 
 <li>ADS1299</li>
 
+<li>ARC Metaware license installation</li>
+
 <li>ARMv7-m branching decipher on STM32L4 mcu</li>
 
 <li>BLE Throughput</li>
@@ -9794,7 +9796,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20220201144225327" list="Tooling $:/ControlPanel" modified="20220201144233350" title="$:/StoryList">
+<div created="20220323083637130" list="$:/ControlPanel [[ARC Metaware license installation]] Tooling" modified="20220323084845522" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9810,7 +9812,7 @@ Error message and password prompt
         },
         &quot;$:/info/startup-timestamp&quot;: {
             &quot;title&quot;: &quot;$:/info/startup-timestamp&quot;,
-            &quot;text&quot;: &quot;20220201144220197&quot;
+            &quot;text&quot;: &quot;20220323083632653&quot;
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
@@ -9846,11 +9848,11 @@ Error message and password prompt
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;2560&quot;
+            &quot;text&quot;: &quot;1920&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;1440&quot;
+            &quot;text&quot;: &quot;1080&quot;
         },
         &quot;$:/info/browser/language&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/language&quot;,
@@ -10041,6 +10043,37 @@ common-mode voltage point is the midpoint of the positive and negative analog in
 Electrode impedance measurement:
 
 Because of the capacitive components corresponding to skin-electrode interface, alternate current (AC) measurement is needed to estimate the skin-electrode impedance. In particular, for dry contact electrodes, which capacitance is considerably high than wet electrodes.</pre>
+</div>
+<div created="20220323083654067" modified="20220323084827269" tags="" title="ARC Metaware license installation">
+<pre>ARC Metaware node locked license tied to PC MAC address (sort of).
+This means if wired connection mac address provided to arc, and during 
+the connection switched to wifi the license won't work anymore as wifi 
+mac address is not the same as wired connection mac. Unless physical 
+mac address is overwritten by software in the runtime. So to overwrite 
+the mac address on centos 7 following should be done:
+The :
+
+```
+nmcli con show --active
+```
+
+command will give the active connection. 
+
+```
+NAME         UUID                                  TYPE      DEVICE        
+Wired_con_1  6e35a56d-366a-3138-9a90-6a06f8683b4c  ethernet  enp0s20f0u2u1 
+virbr0       6632f6ff-4db0-436b-8ece-d42ce131fdcb  bridge    virbr0 
+```
+
+Is the output in my case. Now type:
+
+```
+nmcli con show Wired_con_1
+```
+
+This will show all parameters of ``Wired_con_1``
+
+</pre>
 </div>
 <div created="20200826124733722" modified="20200827135904143" tags="" title="ARMv7-m branching decipher on STM32L4 mcu">
 <pre>Following command 
