Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -9796,7 +9796,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20220323083637130" list="$:/ControlPanel [[ARC Metaware license installation]] Tooling" modified="20220323084845522" title="$:/StoryList">
+<div created="20220323083637130" list="[[ARC Metaware license installation]] Tooling" modified="20220323084845522" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10044,7 +10044,7 @@ Electrode impedance measurement:
 
 Because of the capacitive components corresponding to skin-electrode interface, alternate current (AC) measurement is needed to estimate the skin-electrode impedance. In particular, for dry contact electrodes, which capacitance is considerably high than wet electrodes.</pre>
 </div>
-<div created="20220323083654067" modified="20220323084827269" tags="" title="ARC Metaware license installation">
+<div created="20220323083654067" modified="20220323092518974" tags="" title="ARC Metaware license installation">
 <pre>ARC Metaware node locked license tied to PC MAC address (sort of).
 This means if wired connection mac address provided to arc, and during 
 the connection switched to wifi the license won't work anymore as wifi 
@@ -10072,6 +10072,15 @@ nmcli con show Wired_con_1
 ```
 
 This will show all parameters of ``Wired_con_1``
+
+Check if the *.cloned-mac-address property has the mac address for which the license was issued.
+If not, we need to overwrite the mac address.
+
+Check if under ``/etc/sysconfig/network-scripts`` location exists file named ``ifcfg-Wired_con_1``
+If not, create one, and populate it with values taken from ``nmcli con show Wired_con_1`` output.
+The link between the connection and the created file is done via the ``uuid`` which should be 
+the uuid of the connection its parameters you want to overwrite.
+
 
 </pre>
 </div>
