--- a/index.html
+++ b/index.html
@@ -215,6 +215,8 @@ Error message and password prompt
 
 <li>Cortex M4 Position Independent Code -fPIC or -fropi -frwpi</li>
 
+<li>GDB debugging</li>
+
 <li>GIT</li>
 
 <li>image.png</li>
@@ -9796,7 +9798,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20220323142532320" list="[[ARC Metaware license installation]]" modified="20220323142652596" title="$:/StoryList">
+<div list="[[GDB debugging]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9812,7 +9814,7 @@ Error message and password prompt
         },
         &quot;$:/info/startup-timestamp&quot;: {
             &quot;title&quot;: &quot;$:/info/startup-timestamp&quot;,
-            &quot;text&quot;: &quot;20220323142526841&quot;
+            &quot;text&quot;: &quot;20221213075420022&quot;
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
@@ -9848,11 +9850,11 @@ Error message and password prompt
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;1920&quot;
+            &quot;text&quot;: &quot;2560&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;1080&quot;
+            &quot;text&quot;: &quot;1440&quot;
         },
         &quot;$:/info/browser/language&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/language&quot;,
@@ -10465,6 +10467,11 @@ Need to find a way to make linker make .bss relocations relatively to .data segm
 So the workaround I found was to use the ``PHDRS`` command in linker script. This command allows us to explicitly load sections in desired segments.
 This way we can place both ``.data`` and ``.bss`` sections in ``data`` segment in runtime!
 </pre>
+</div>
+<div created="20221213080512254" modified="20221213084009920" tags="" title="GDB debugging">
+<pre>If you have a test that fails and you want to debug it, set a break point in following format 
+
+b test_file: line</pre>
 </div>
 <div created="20211021070937205" modified="20211205055704007" tags="" title="GIT">
 <pre>To &quot;fix&quot; an old commit with a small change, without changing the commit message of the old commit, where OLDCOMMIT is something like 091b73a:
