--- a/index.html
+++ b/index.html
@@ -9792,13 +9792,13 @@ Error message and password prompt
 <div created="20200824141719166" modified="20200824143042600" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/All</pre>
 </div>
-<div created="20200824141448958" modified="20230826084857479" title="$:/state/tab/sidebar--595412856">
+<div created="20200824141448958" modified="20220104080433145" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20230826084827848" list="$:/ControlPanel [[GDB debugging]]" modified="20230826084901674" title="$:/StoryList">
+<div created="20230826085049016" list="[[GDB debugging]]" modified="20230826085049016" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9814,7 +9814,7 @@ Error message and password prompt
         },
         &quot;$:/info/startup-timestamp&quot;: {
             &quot;title&quot;: &quot;$:/info/startup-timestamp&quot;,
-            &quot;text&quot;: &quot;20230826084823759&quot;
+            &quot;text&quot;: &quot;20230826085045753&quot;
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
@@ -10468,7 +10468,7 @@ So the workaround I found was to use the ``PHDRS`` command in linker script. Thi
 This way we can place both ``.data`` and ``.bss`` sections in ``data`` segment in runtime!
 </pre>
 </div>
-<div created="20221213080512254" modified="20230826084844303" tags="" title="GDB debugging">
+<div created="20221213080512254" modified="20230826085114738" tags="" title="GDB debugging">
 <pre>If you have a test that fails and you want to debug it, set a break point in following format 
 
 b test_file: line
