--- a/index.html
+++ b/index.html
@@ -203,6 +203,8 @@ Error message and password prompt
 
 <li>ARC Metaware license installation</li>
 
+<li>arm toolchain installation on linux</li>
+
 <li>ARMv7-m branching decipher on STM32L4 mcu</li>
 
 <li>BLE Throughput</li>
@@ -9798,7 +9800,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20230826085049016" list="[[GDB debugging]]" modified="20230826085049016" title="$:/StoryList">
+<div created="20230826085049016" list="[[arm toolchain installation on linux]] [[GDB debugging]]" modified="20230826085049016" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10092,6 +10094,31 @@ From now on the arc metaware should work
 
 
 </pre>
+</div>
+<div created="20230826085151702" modified="20230826085739370" tags="" title="arm toolchain installation on linux">
+<pre>There is no straightforward way to determine the latest version of toolchain via command line. So download web page and extract the latest version of toolchain as follows:
+
+ARM_TOOLCHAIN_VERSION=$(curl -s https://developer.arm.com/downloads/-/arm-gnu-toolchain-downloads | grep -Po '&lt;h4&gt;Version \K.+(?=&lt;/h4&gt;)')
+
+Next, download archive file from official website:
+
+curl -Lo gcc-arm-none-eabi.tar.xz &quot;https://developer.arm.com/-/media/Files/downloads/gnu/${ARM_TOOLCHAIN_VERSION}/binrel/arm-gnu-toolchain-${ARM_TOOLCHAIN_VERSION}-x86_64-arm-none-eabi.tar.xz&quot;
+
+Create a new directory to store toolchain files:
+
+sudo mkdir /opt/gcc-arm-none-eabi
+
+Extract toolchain files to specified directory:
+
+sudo tar xf gcc-arm-none-eabi.tar.xz --strip-components=1 -C /opt/gcc-arm-none-eabi
+
+Add /opt/gcc-arm-none-eabi/bin directory to the PATH environment variable.
+
+echo 'export PATH=$PATH:/opt/gcc-arm-none-eabi/bin' | sudo tee -a /etc/profile.d/gcc-arm-none-eabi.sh
+
+To make changes to take effect, logout and login to your system or run the following command to apply the changes immediately:
+
+source /etc/profile</pre>
 </div>
 <div created="20200826124733722" modified="20200827135904143" tags="" title="ARMv7-m branching decipher on STM32L4 mcu">
 <pre>Following command 
